// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots With disabled prop should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        disabled={true}
        full={false}
        inverted={false}
        pressed={false}
        small={false}
        style={
          Array [
            Object {
              "backgroundColor": "#DBDBE8",
              "borderRadius": 9999,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          disabled={true}
          inverted={false}
          pressed={false}
          style={
            Array [
              Object {
                "color": "#9898A6",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        >
          Button
        </Text>
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with link Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        disabled={true}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#9898A6",
              "fontSize": 14,
              "fontWeight": "700",
              "marginBottom": 8,
              "marginTop": 16,
              "textAlign": "center",
            },
          ]
        }
        variant="primary"
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with outline Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        disabled={true}
        pressed={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#9898A6",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 2,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          disabled={true}
          pressed={false}
          style={
            Array [
              Object {
                "color": "#9898A6",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with text Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        disabled={true}
        pressed={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 9999,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          disabled={true}
          pressed={false}
          style={
            Array [
              Object {
                "color": "#9898A6",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    full={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        disabled={false}
        full={true}
        inverted={false}
        pressed={false}
        small={false}
        style={
          Array [
            Object {
              "backgroundColor": "#F46152",
              "borderRadius": 9999,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
              "width": "100%",
            },
          ]
        }
      >
        <Text
          disabled={false}
          inverted={false}
          pressed={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        >
          Button
        </Text>
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with outline Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    full={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        full={true}
        pressed={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#F46152",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 2,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
              "width": "100%",
            },
          ]
        }
      >
        <Text
          pressed={false}
          style={
            Array [
              Object {
                "color": "#F46152",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with text Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    full={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        full={true}
        pressed={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 9999,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
              "width": "100%",
            },
          ]
        }
      >
        <Text
          pressed={false}
          style={
            Array [
              Object {
                "color": "#F46152",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    inverted={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        disabled={false}
        full={false}
        inverted={true}
        pressed={false}
        small={false}
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 9999,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          disabled={false}
          inverted={true}
          pressed={false}
          style={
            Array [
              Object {
                "color": "#F46152",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        >
          Button
        </Text>
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with link Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    inverted={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        disabled={false}
        inverted={true}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 14,
              "fontWeight": "700",
              "marginBottom": 8,
              "marginTop": 16,
              "textAlign": "center",
            },
          ]
        }
        variant="primary"
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with outline Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    inverted={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        inverted={true}
        pressed={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#FFFFFF",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 2,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          inverted={true}
          pressed={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with text Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    inverted={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        inverted={true}
        pressed={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 9999,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          pressed={false}
          style={
            Array [
              Object {
                "color": "#F46152",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    small={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        disabled={false}
        full={false}
        inverted={false}
        pressed={false}
        small={true}
        style={
          Array [
            Object {
              "backgroundColor": "#F46152",
              "borderRadius": 9999,
              "height": 32,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          disabled={false}
          inverted={false}
          pressed={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        >
          Button
        </Text>
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with outline Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    small={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        pressed={false}
        small={true}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#F46152",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 32,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          pressed={false}
          style={
            Array [
              Object {
                "color": "#F46152",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with text Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    small={true}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        pressed={false}
        small={true}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 9999,
              "height": 32,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          pressed={false}
          style={
            Array [
              Object {
                "color": "#F46152",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots Without props should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        disabled={false}
        full={false}
        inverted={false}
        pressed={false}
        small={false}
        style={
          Array [
            Object {
              "backgroundColor": "#F46152",
              "borderRadius": 9999,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          disabled={false}
          inverted={false}
          pressed={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        >
          Button
        </Text>
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots Without props should match snapshot with link Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        disabled={false}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#F46152",
              "fontSize": 14,
              "fontWeight": "700",
              "marginBottom": 8,
              "marginTop": 16,
              "textAlign": "center",
            },
          ]
        }
        variant="primary"
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots Without props should match snapshot with outline Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        pressed={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#F46152",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 2,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          pressed={false}
          style={
            Array [
              Object {
                "color": "#F46152",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> Snapshots Without props should match snapshot with text Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        pressed={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 9999,
              "height": 48,
              "justifyContent": "center",
              "paddingLeft": 24,
              "paddingRight": 24,
            },
          ]
        }
      >
        <Text
          pressed={false}
          style={
            Array [
              Object {
                "color": "#F46152",
                "fontSize": 14,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Button /> With variant prop should match snapshot with default Button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    variant="primary"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        disabled={false}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#F46152",
              "fontSize": 14,
              "fontWeight": "700",
              "marginBottom": 8,
              "marginTop": 16,
              "textAlign": "center",
            },
          ]
        }
        variant="primary"
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    variant="secondary"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        disabled={false}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#652CDB",
              "fontSize": 14,
              "fontWeight": "700",
              "marginBottom": 8,
              "marginTop": 16,
              "textAlign": "center",
            },
          ]
        }
        variant="secondary"
      />
    </View>
  </TouchableWithoutFeedback>
  <TouchableWithoutFeedback
    variant="tertiary"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        disabled={false}
        inverted={false}
        pressed={false}
        style={
          Array [
            Object {
              "color": "#2B9486",
              "fontSize": 14,
              "fontWeight": "700",
              "marginBottom": 8,
              "marginTop": 16,
              "textAlign": "center",
            },
          ]
        }
        variant="tertiary"
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;
